<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/def_bg"
    tools:context=".SettingsActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dp_10">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btnBack"
                style="@style/icon"
                android:src="@drawable/ic_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/text.25"
                android:text="@string/settings"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_enableNot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:thumbTint="@color/primary"
            android:textStyle="bold"
            android:text="@string/enable_notifications"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_shuffle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shuffle"
            android:textStyle="bold"
            app:thumbTint="@color/primary" />

        <TextView
            style="@style/text.16"
            android:text="@string/volume"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/dp_16"/>
        <SeekBar
            android:id="@+id/seekbar_volume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100"
            android:layout_marginTop="@dimen/dp_8"/>
        <TextView
            style="@style/text.16"
            android:text="@string/repeat"
            android:layout_marginTop="@dimen/dp_16"
            android:textStyle="bold"/>

        <RadioGroup
            android:id="@+id/rg_repeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rb_repeatOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repeat_one"/>

            <RadioButton
                android:id="@+id/rb_repeatAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repeat_all"/>

            <RadioButton
                android:id="@+id/rb_repeatOrder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repeat_order"/>
        </RadioGroup>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16">
            <TextView
                style="@style/text.16"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/reset_am_tags"
                android:textStyle="bold"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_resetTags"
                style="@style/btn.borderGradient"
                android:text="@string/reset"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>
