<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/album_art"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:scaleType="centerCrop"
            android:src="@drawable/img_def_album_art"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/album" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_title"
                android:text="@string/title"
                android:textStyle="bold"
                android:textSize="14sp"
                android:textColor="@color/def_text"
                android:maxLines="1"
                android:ellipsize="end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/txt_artist"
                android:text="@string/artist"
                android:textSize="12sp"
                android:textColor="@color/def_text_light"
                android:maxLines="1"
                android:ellipsize="end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/btn_close"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@android:drawable/ic_menu_close_clear_cancel"
            android:contentDescription="@string/c_close"
            android:layout_marginStart="8dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp">

        <ImageView
            android:id="@+id/btn_prev"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_prev_40"
            android:contentDescription="@string/prev" />

        <ImageView
            android:id="@+id/btn_play_pause"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_play_40"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/play_pause" />

        <ImageView
            android:id="@+id/btn_next"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_next_40"
            android:contentDescription="@string/next" />
    </LinearLayout>
</LinearLayout>
