<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/bm_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/bm_title_icon"
            style="@style/icon.small"
            android:src="@drawable/ic_arrow_asc"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/title"
            android:padding="16dp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/bm_artist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/bm_artist_icon"
            style="@style/icon.small"
            android:src="@drawable/ic_arrow_asc"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/artist"
            android:padding="16dp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/bm_album"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/bm_album_icon"
            style="@style/icon.small"
            android:src="@drawable/ic_arrow_asc"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/album"
            android:padding="16dp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/bm_year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/bm_year_icon"
            style="@style/icon.small"
            android:src="@drawable/ic_arrow_asc"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/year"
            android:padding="16dp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/bm_dateRelease"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/bm_dateRelease_icon"
            style="@style/icon.small"
            android:src="@drawable/ic_arrow_asc"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/date_release"
            android:padding="16dp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/bm_dateAdded"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/bm_dateAdded_icon"
            style="@style/icon.small"
            android:src="@drawable/ic_arrow_asc"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/date_added"
            android:padding="16dp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/bm_dateModified"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/bm_dateModified_icon"
            style="@style/icon.small"
            android:src="@drawable/ic_arrow_asc"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/date_modified"
            android:padding="16dp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <!-- Add more options here -->
</androidx.appcompat.widget.LinearLayoutCompat>
