<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="1dp"
    android:padding="@dimen/dp_9"
    android:background="@color/bg_blur_x">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_itemImg"
        android:layout_width="@dimen/dp_55"
        android:layout_height="@dimen/dp_55"
        android:layout_marginEnd="@dimen/dp_100"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/img_def_album_art" />

<!--    Music Playing Animation-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/dp_10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_itemImg"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_title"
            style="@style/text.16"
            android:text="@string/title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/middle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title">

            <TextView
                android:id="@+id/playBar_tv_duration"
                style="@style/text.light.13"
                android:text="@string/duration" />

            <TextView style="@style/text.dot.13" />

            <TextView
                android:id="@+id/playBar_tv_album"
                style="@style/text.light.13"
                android:text="@string/album" />

            <TextView style="@style/text.dot.13" />

            <TextView
                android:id="@+id/playBar_tv_artist"
                style="@style/text.light.13"
                android:text="@string/artist" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/middle">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/dp_11"
                android:layout_height="@dimen/dp_11"
                android:layout_gravity="center"
                android:src="@drawable/ic_rank"/>
            <TextView
                android:id="@+id/playBar_tv_rank"
                style="@style/text.light.x.11"
                android:text="@string/rank"/>
            <TextView style="@style/text.dot.11"/>
            <TextView
                android:id="@+id/playBar_tv_tags"
                style="@style/text.light.x.11"
                android:text="@string/item_row_tags" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:visibility="gone"
        android:id="@+id/anim_music_playing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/music_waves_bg"
        app:layout_constraintBottom_toBottomOf="@+id/iv_itemImg"
        app:layout_constraintEnd_toEndOf="@+id/iv_itemImg"
        app:layout_constraintStart_toStartOf="@+id/iv_itemImg"
        app:layout_constraintTop_toTopOf="@+id/iv_itemImg">

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="@dimen/dp_40"
            android:layout_height="@dimen/dp_40"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/music_waves" />
    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>