<?xml version="1.0" encoding="utf-8"?>

<com.example.amplaybyalmamun.custom_views.TouchableView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/playBar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@color/trans">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/blurBg_playBar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_70"
            android:scaleType="centerCrop"
            android:src="@drawable/img_def_album_art"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayoutCompat2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg_blur"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <SeekBar
                android:id="@+id/playBar_seekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="0dp"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:progress="0"
                android:splitTrack="false"
                android:thumb="@android:color/transparent" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/dp_3"
                android:paddingBottom="@dimen/dp_3">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/playBar_left"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/dp_5">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/playBar_iv_albumArt"
                        android:layout_width="@dimen/dp_40"
                        android:layout_height="@dimen/dp_40"
                        android:scaleType="centerCrop"
                        android:src="@drawable/img_def_album_art" />

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_10"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_title"
                            style="@style/text.16"
                            android:text="@string/title" />

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <TextView
                                android:id="@+id/playBar_tv_liveDuration"
                                style="@style/text.light.13"
                                android:text="@string/duration" />

                            <TextView style="@style/text.dot.16" />

                            <TextView
                                android:id="@+id/playBar_tv_artist"
                                style="@style/text"
                                android:text="@string/artist" />
                        </androidx.appcompat.widget.LinearLayoutCompat>
                    </androidx.appcompat.widget.LinearLayoutCompat>
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="center">

                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/playBar_btn_playPause"
                        style="@style/icon"
                        android:src="@drawable/ic_play_40" />

                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/playBar_btn_next"
                        style="@style/icon"
                        android:src="@drawable/ic_next_40" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.example.amplaybyalmamun.custom_views.TouchableView>
